fetch data fails

--- a/src/CSS/dashboard.css
+++ b/src/CSS/dashboard.css
@@ -41,6 +41,10 @@
         bottom: 4em;
         right: 1em;
     }
+
+    .dashboard{
+        background:white
+    }
 }
 
 @media (min-width:1024px) {
