--- a/src/CSS/slideMenu.css
+++ b/src/CSS/slideMenu.css
@@ -1,6 +1,7 @@
 /*mobile*/
 /*DeskTop*/
 @media (min-width:320px)  and (max-width:768px){
+  
 
 
   .userMenu {
@@ -90,7 +91,6 @@
     .close-menu{
       background:transparent;
       border:none;
-      color:#025CA0;
       margin-left:5em;
       font-size:1.2em
     }
@@ -103,7 +103,7 @@
 
 
     .userMenu {
-
+      position: absolute;
       padding: 2.5em 0;
       font-size: .8em;
       background: #E16F2C;
