--- a/src/CSS/dashboard.css
+++ b/src/CSS/dashboard.css
@@ -4,9 +4,11 @@
     }
 
     .logo {
-        height: 7em;
-        margin-left: 1em;
-        margin-top: .5em;
+        height: 6em !important;
+        position: relative;
+        right: 1.5em;
+        bottom: 1.5em;
+        width: 6em !important;
     }
 
     .h2-name {
@@ -16,7 +18,16 @@
     }
 
     .p-title-tasks {
-        float: right
+        float: right;
+        position: relative;
+        right: 3.5em;
+    }
+
+    .btn-logout {
+        border: none;
+        background: transparent;
+        font-size: 1.1em;
+        outline:none !important;
     }
 
     .btn-categories {
@@ -27,14 +38,8 @@
         border-radius: 5px
     }
 
-    .p-title-tasks {
-        position: relative;
-        bottom: 4em;
-        right: 1em;
-    }
-
-    .dashboard{
-        background:white
+    .dashboard {
+        background: white
     }
 
 }
