--- a/src/CSS/dashboard.css
+++ b/src/CSS/dashboard.css
@@ -42,7 +42,7 @@
         color: white;
         border-radius: 5px;
         position: relative;
-        top: 3em;
+        top: .8em;
     }
 
     .btn-create-task {
@@ -72,6 +72,16 @@
         margin-left: 1em;
         margin-right: 1em;
         border-radius: 5px;
+    }
+
+    .vertical-lign{
+        position: absolute;
+        top: 0px;
+        bottom: 0px;
+        border: 1px solid #40B7AD;
+        left: 17em;
+        margin-top: 1em;
+        margin-bottom: 1em;
     }
 
 }
