--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -1,3 +1,8 @@
+.flex-container{
+    display:flex;
+    flex-direction:column
+}
+
 @media only screen and (min-device-width:320px) and (max-device-width:768px) and (orientation: portrait) {
     .background-home{
         background:orange;
