--- a/src/CSS/create-task.css
+++ b/src/CSS/create-task.css
@@ -29,8 +29,7 @@
 
     .taskBall-1{
         position: absolute;
-        right:23em;
-        
+        right: 98vw;
     }
 
     .switch-button__checkbox {
