--- a/src/CSS/slideMenu.css
+++ b/src/CSS/slideMenu.css
@@ -29,7 +29,6 @@
   }
 
   .bm-burger-button {
-
     position: absolute;
     width: 36px;
     height: 30px;
@@ -49,6 +48,7 @@
     border: none;
     font-size: 0px;
     background: transparent;
+    transform: translate(-4px, -117px);
     cursor: pointer;
     outline: none;
   }
