--- a/src/CSS/dashboard.css
+++ b/src/CSS/dashboard.css
@@ -15,9 +15,11 @@
     }
 
     .h2-name {
-        float: right;
         margin-right: 2em;
         color: #E16F2C;
+        position: absolute;
+        transform: translate(30%, -174%);
+        font-size: 1.5em;
     }
 
     .p-title-tasks {
@@ -42,7 +44,11 @@
         color: white;
         border-radius: 5px;
         position: relative;
-        top: .6em;
+        bottom: 5.4em;
+    }
+    .creation-date{
+        position: relative;
+
     }
 
     .btn-create-task {
@@ -52,7 +58,7 @@
         color: white;
         border-radius: 5px;
         position: relative;
-        left: 13em;
+        left: 10em;
         top: 1.3em;
         height: 3.3em;
         outline: none;
@@ -81,12 +87,13 @@
         top: 0px;
         bottom: 0px;
         border: 1px solid #40B7AD;
-        left: 10.2em;
+        left: 60%;
         margin-top: 1em;
         margin-bottom: 1em;
     }
     .tasks-headers{
-        color:#FF6712
+        color:#FF6712;
+        width: 5em;
     }
 
     .date{
@@ -119,8 +126,9 @@
         color: #E16F2C;
         position: relative;
         bottom: 2.4em;
-        left: 61em;
+        left: 59em;
         font-size: 1.3em;
+        width: 7em;
     }
 
     .p-title-tasks {
@@ -188,7 +196,7 @@
         min-height: 80vh;
         padding: 1em;
         margin-left: 1em;
-        margin-right: 1em;
+        margin-right: 2em;
         border-radius: 5px;
         font-size: 1.1em;
         font-weight: 600;
