--- a/src/CSS/dashboard.css
+++ b/src/CSS/dashboard.css
@@ -59,7 +59,7 @@
         border-radius: 5px;
         position: relative;
         left: 10em;
-        top: 1.3em;
+        top: 1.4em;
         height: 3.3em;
         outline: none;
     
@@ -98,6 +98,19 @@
 
     .date{
         color: #00526C;
+    }
+    .btn-newTask-short{
+        background: #E16F2C;
+        color: white;
+        border: none;
+        margin-top: 1em !important;
+        border-radius: 5px;
+        display: block;
+        margin: auto;
+        padding-right: 1em;
+        padding-left: 1em;
+        padding-top: .5em;
+        padding-bottom: .5em;
     }
 
 }
@@ -164,7 +177,7 @@
         border-radius: 5px;
         position: relative;
         left: 13em;
-        top: 1.3em;
+        top: 1.53em;
         height: 3.3em;
         outline: none;
         z-index: 2000;
