--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -20,7 +20,7 @@
         display: block;
         position: absolute;
         border-radius: 100% 50%;
-        width: 48vw;
+        width: 11.7em;
         height: 40px;
         background-color: white;
         right: 0px;
@@ -64,7 +64,7 @@
         display: block;
         position: absolute;
         border-radius: 100% 50%;
-        width: 48vw;
+        width: 59vw;
         height: 80px;
         background-color: white;
         right: 0px;
@@ -76,8 +76,8 @@
         display: block;
         position: absolute;
         border-radius: 100% 50%;
-        width: 59vw;
-        height: 70px;
+        width: 49vw;
+        height: 64px;
         background-color: #e0efe3;
         left: 0;
         top: 27px;
