--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -20,7 +20,7 @@
         display: block;
         position: absolute;
         border-radius: 100% 50%;
-        width: 11.7em;
+        width: 50.7vw;
         height: 40px;
         background-color: white;
         right: 0px;
