--- a/src/CSS/slideMenu.css
+++ b/src/CSS/slideMenu.css
@@ -1,5 +1,8 @@
 /*mobile*/
-@media only screen and (min-device-width:320px) and (max-device-width:768px) and (orientation: portrait) {
+@media only screen 
+and (min-device-width:320px) 
+and (max-device-width:768px) 
+and (orientation: portrait) {
 
 
   .bm-menu-wrap {
@@ -149,6 +152,158 @@
   }
 
 
+}
+
+@media only screen 
+and (min-device-width: 320px) 
+and (max-device-height:600px) 
+and (orientation:landscape) {
+    
+  .bm-menu-wrap {
+    position: fixed;
+    right: inherit;
+    z-index: 1100;
+    width: 300px;
+    height: 100vh !important;
+    transition: all 0.5s ease 0s;
+    top: 0;
+  }
+
+  .userMenu .bm-menu {
+    padding: .5em 0;
+    font-size: .8em;
+    background: #E16F2C;
+    z-index: 1100;
+    width: 20em !important;
+    transition: all 0.5s ease 0s;
+    height: 100vh;
+    top: 7.5em !important;
+    overflow: hidden !important;
+  }
+
+  .bm-overlay {
+    background: transparent !important;
+  }
+
+  .bm-burger-button {
+    position: absolute;
+    width: 36px;
+    height: 30px;
+    left: 36px;
+    top: 11.5em;
+
+  }
+
+  .bm-burger-button > button {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 32vw !important;
+    height: 11vh !important;
+    margin: 0px;
+    padding: 0px;
+    border: none;
+    font-size: 0px;
+    background: transparent;
+    transform: translate(-4px, -117px);
+    cursor: pointer;
+    outline: none;
+  }
+  
+  .bm-item {
+    font-size: 1.2em;
+    background: transparent;
+    border: none;
+    color: white;
+    font-weight: 600;
+    line-height: 3.5em;
+    text-align: center;
+    margin-top: 1.5em;
+    
+  }
+
+  .menu-item{
+    outline:none !important
+  }
+
+  .bm-cross-button{
+    position: absolute;
+    left: 1em;
+    top: 0em !important;
+    z-index: 2000;
+    font-size: 1.4em;
+  }
+  .bm-cross-button:after {
+    
+    font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f00d";
+    color:#237c75;
+  }
+  
+  .bm-cross-button > button {
+    outline:none !important
+  }
+
+
+  .slide-right {
+    -webkit-animation: slide-right 1s cubic-bezier(0.250, 0.460, 0.450, 0.940)linear both;
+    animation: slide-right 1s linear both;
+  }
+
+  .slide-left {
+    -webkit-animation: slide-left 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) linear both;
+    animation: slide-left 1s linear both;
+  }
+
+  @keyframes slide-right {
+    0% {
+      -webkit-transform: translatex(-50em)
+    }
+
+    50% {
+      -webkit-transform: translateX(.075em)
+    }
+
+    100% {
+      -webkit-animation: translateX(.15);
+    }
+  }
+
+  @keyframes slide-left {
+    0% {
+      -webkit-transform: translatex(.15em)
+    }
+
+    50% {
+      -webkit-transform: translateX(-25em)
+    }
+
+    100% {
+      -webkit-transform: translateX(-50em)
+    }
+  }
+
+  .bm-item:hover {
+    background: rgb(1, 144, 245);
+    -webkit-box-shadow: -1px 17px 41px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -1px 17px 41px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: -1px 17px 41px 0px rgba(0, 0, 0, 0.75);
+  }
+
+  .a-links {
+    color: white;
+  }
+
+  .a-links:hover {
+    text-decoration: none;
+    color: orange
+  }
+
+  .close-menu {
+    background: transparent;
+    border: none;
+    margin-left: 5em;
+    font-size: 1.2em
+  }
 }
 
 /*DeskTop*/
