--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -3,7 +3,10 @@
     flex-direction:column
 }
 
-@media only screen and (min-device-width:320px) and (max-device-width:768px) and (orientation: portrait) {
+@media only screen 
+and (min-device-width:320px) 
+and (max-device-width:768px) 
+and (orientation: portrait) {
     .background-home{
         height:100vh;
         width: 100vw;
